[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
apollo-parser = "0.7.1"
clap = { version = "4.4.6", features = ["derive"] }
ipnetwork = "0.20.0"
miette = { version = "5.10.0", features = ["fancy"] }
reqwest = "0.11.22"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
