[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.6", features = ["dynamic-schema"] }
async-graphql-poem = "6.0.6"
poem = "1.3.58"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "process"] }

